--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@ body {
     background-color: rgba(255,255,255,0.5);
     background-blend-mode: lighten;
     background-size: cover;
+    background-position: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
     text-align: center;
